# recall

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs
src/capture/: context.rs  log.rs  mod.rs
src/config/: settings.rs
src/db/: models.rs  queries.rs  schema.rs
src/llm/: answerer.rs  client.rs  mod.rs  summarizer.rs
src/privacy/: filter.rs
src/search/: engine.rs
src/shell/: zsh.rs
src/tui/: app.rs  detail.rs  mod.rs  search.rs  timeline.rs
src/web/: api.rs  server.rs
src/web/static/: graph.js  index.html  style.css
